# enigma2-openpli-test

./: ChangeLog  README.md  configure.ac
data/fonts/: Makefile.am
lib/base/: Makefile.inc
lib/python/: skin.py
lib/python/Components/: Makefile.am
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: Makefile.am
