installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
        AVSwitch.py About.py ActionMap.py BlinkingPixmap.py \
        Button.py ChannelsImporter.py ChoiceList.py ClientMode.py \
        Clock.py ConditionalWidget.py ConfigList.py Console.py \
        DiskInfo.py Element.py EpgBouquetList.py EpgConfig.py \
        EpgList.py EpgListBase.py EpgListGrid.py EpgListMulti.py \
        EpgListSingle.py EpgLoadSave.py FIFOList.py FanControl.py \
        FileList.py GUIComponent.py HTMLComponent.py Harddisk.py \
        HdmiCec.py HelpMenuList.py Input.py InputDevice.py \
        InputHotplug.py Ipkg.py Keyboard.py Label.py \
        Language.py Language_cache.py Lcd.py MediaPlayer.py \
        MenuList.py MovieList.py MultiContent.py Netlink.py \
        Network.py NetworkTime.py NimManager.py OnlineUpdateCheck.py \
        PackageInfo.py ParentalControl.py PerServiceDisplay.py Pixmap.py \
        Playlist.py PluginComponent.py PluginList.py PowerTimerList.py \
        ProgressBar.py RFmod.py RecordingConfig.py ResourceManager.py \
        Scanner.py ScrollLabel.py SelectionList.py Sensors.py \
        ServiceEventTracker.py ServiceList.py ServicePosition.py ServiceScan.py \
        SetupDevices.py Slider.py SwapCheck.py SystemInfo.py \
        Task.py TimerList.py TimerSanityCheck.py Timeshift.py \
        Timezones.py TuneTest.py TunerInfo.py UsageConfig.py \
        VariableText.py VariableValue.py VideoWindow.py VolumeBar.py \
        VolumeControl.py __init__.py config.py opkg.py
